implementações (equipamento) e ajustes abertura de chamado!!

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="root"></div>
     
     <!-- O Vite aponta para o seu 'main.tsx' -->
+    <!-- Requer navegadores modernos: Chrome 61+, Firefox 60+, Safari 10.1+ -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
