--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     
     <!-- O Vite aponta para o seu 'main.tsx' -->
     <!-- Requer navegadores modernos: Chrome 61+, Firefox 60+, Safari 10.1+ -->
-    <script nomodule src="/dist/main.legacy.js"></script>
+    <!-- legacy fallback removido: não usamos main.legacy.js no deploy -->
   </body>
 </html>
