--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <!-- O Vite aponta para o seu 'main.tsx' -->
     <!-- Requer navegadores modernos: Chrome 61+, Firefox 60+, Safari 10.1+ -->
     <script type="module" src="/src/main.tsx"></script>
-    <script nomodule src="/dist/main.legacy.js"></script>
+    <!-- legacy fallback removido: não usamos main.legacy.js no deploy -->
   </body>
 </html>
